@@ -7,12 +7,20 @@
  */
 package org.dspace.content;
 
+import static org.dspace.authority.service.AuthorityValueService.AUTHORITY_CLEANUP_BUSINESS_MODE;
+import static org.dspace.authority.service.AuthorityValueService.AUTHORITY_CLEANUP_CLEAN_ALL_MODE;
+import static org.dspace.authority.service.AuthorityValueService.AUTHORITY_CLEANUP_PROPERTY_PREFIX;
+import static org.dspace.authority.service.AuthorityValueService.REFERENCE;
+import static org.dspace.authority.service.AuthorityValueService.SPLIT;
+import static org.dspace.content.authority.Choices.CF_UNSET;
+
 import java.io.IOException;
 import java.io.InputStream;
 import java.sql.SQLException;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
@@ -21,8 +29,8 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Supplier;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -31,6 +39,8 @@ import org.apache.logging.log4j.Logger;
 import org.dspace.app.requestitem.RequestItem;
 import org.dspace.app.requestitem.service.RequestItemService;
 import org.dspace.app.util.AuthorizeUtil;
+import org.dspace.authority.service.AuthorityValueService;
+import org.dspace.authority.service.impl.ItemSearcherByMetadata;
 import org.dspace.authorize.AuthorizeConfiguration;
 import org.dspace.authorize.AuthorizeException;
 import org.dspace.authorize.ResourcePolicy;
@@ -55,11 +65,15 @@ import org.dspace.contentreport.QueryPredicate;
 import org.dspace.core.Constants;
 import org.dspace.core.Context;
 import org.dspace.core.LogHelper;
+import org.dspace.core.exception.SQLRuntimeException;
 import org.dspace.discovery.DiscoverQuery;
 import org.dspace.discovery.DiscoverResult;
+import org.dspace.discovery.DiscoverResultItemIterator;
 import org.dspace.discovery.SearchService;
 import org.dspace.discovery.SearchServiceException;
 import org.dspace.discovery.indexobject.IndexableItem;
+import org.dspace.discovery.indexobject.IndexableWorkflowItem;
+import org.dspace.discovery.indexobject.IndexableWorkspaceItem;
 import org.dspace.eperson.EPerson;
 import org.dspace.eperson.Group;
 import org.dspace.eperson.service.GroupService;
@@ -185,6 +199,9 @@ public class ItemServiceImpl extends DSpaceObjectServiceImpl<Item> implements It
     @Autowired
     private VersionHistoryService versionHistoryService;
 
+    @Autowired
+    private List<ItemSearcherByMetadata> itemSearcherByMetadata;
+
     protected ItemServiceImpl() {
     }
 
@@ -298,14 +315,14 @@ public class ItemServiceImpl extends DSpaceObjectServiceImpl<Item> implements It
         Optional<MetadataValue> colEntityType = getDSpaceEntityType(collection);
         Optional<MetadataValue> templateItemEntityType = getDSpaceEntityType(templateItem);
 
-        if (template && colEntityType.isPresent() && templateItemEntityType.isPresent() &&
+        if (colEntityType.isPresent() && templateItemEntityType.isPresent() &&
             !Strings.CS.equals(colEntityType.get().getValue(), templateItemEntityType.get().getValue())) {
             throw new IllegalStateException("The template item has entity type : (" +
                 templateItemEntityType.get().getValue() + ") different than collection entity type : " +
                 colEntityType.get().getValue());
         }
 
-        if (template && colEntityType.isPresent() && templateItemEntityType.isEmpty()) {
+        if (colEntityType.isPresent() && templateItemEntityType.isEmpty()) {
             MetadataValue original = colEntityType.get();
             MetadataField metadataField = original.getMetadataField();
             MetadataSchema metadataSchema = metadataField.getMetadataSchema();
@@ -895,8 +912,161 @@ public class ItemServiceImpl extends DSpaceObjectServiceImpl<Item> implements It
         item.clearCollections();
         item.setOwningCollection(null);
 
+        // remove authority references
+        if (configurationService.getBooleanProperty("item-deletion.authority-cleanup.enabled", false)) {
+            removeAuthorityReferences(context, item);
+        }
+
         // Finally remove item row
         itemDAO.delete(context, item);
+    }
+
+    /**
+     * Performs authority reference cleanup when an item is deleted and the
+     * {@code item-deletion.authority-cleanup.enabled} configuration is set to {@code true}.
+     *
+     * <p><strong>Purpose:</strong></p>
+     * <p>When an entity item (Person, Organization, Project, etc.) is deleted, other items
+     * throughout the repository may still have metadata fields that reference the deleted
+     * entity through authority control values. This method systematically locates and
+     * handles these orphaned authority references to maintain data integrity.</p>
+     *
+     * <p><strong>Configuration-Driven Behavior:</strong></p>
+     * <p>This method only executes when {@code item-deletion.authority-cleanup.enabled} is
+     * {@code true}. The cleanup behavior for each metadata field is controlled by
+     * configuration properties:</p>
+     * <ul>
+     *   <li><strong>{@code authority.cleanup.<metadata-field>}</strong> - Field-specific cleanup mode</li>
+     *   <li><strong>{@code authority.cleanup.default}</strong> - Default cleanup mode for unspecified fields</li>
+     * </ul>
+     *
+     * <p><strong>Cleanup Process:</strong></p>
+     * <ol>
+     *   <li><strong>Identify Authority-Controlled Fields:</strong> Determines which metadata fields
+     *       are authority-controlled based on the deleted item's entity type</li>
+     *   <li><strong>Find Related Items:</strong> Searches for all items containing authority references
+     *       to the deleted item's UUID in their metadata fields</li>
+     *   <li><strong>Apply Cleanup Strategy:</strong> For each affected metadata field, applies the
+     *       configured cleanup mode to handle the orphaned authority reference</li>
+     *   <li><strong>Update and Uncache:</strong> Persists changes and clears Hibernate cache to
+     *       ensure immediate visibility of updates</li>
+     * </ol>
+     *
+     * <p><strong>Cleanup Modes:</strong></p>
+     * <ul>
+     *   <li><strong>{@code BUSINESS}</strong> - Replaces the UUID authority with the deleted item's
+     *       business identifier (e.g., DOI, ORCID, handle) prefixed with {@code REFERENCE::}.
+     *       This preserves the metadata value while indicating the source entity is no longer active.</li>
+     *   <li><strong>{@code CLEAN_ALL}</strong> - Completely removes the metadata value and its
+     *       authority reference. Use this for metadata that becomes meaningless without the entity.</li>
+     * </ul>
+     *
+     * @param context     the DSpace context for database operations and authorization
+     * @param deletedItem the item being deleted that may be referenced by authority values in other items
+     * @throws SQLException       if database operations fail during authority cleanup
+     * @throws AuthorizeException if the current user lacks permission to modify related items
+     * @see AuthorityValueService#AUTHORITY_CLEANUP_BUSINESS_MODE
+     * @see AuthorityValueService#AUTHORITY_CLEANUP_CLEAN_ALL_MODE
+     * @see org.dspace.content.authority.service.ChoiceAuthorityService#getAuthorityControlledFieldsByEntityType
+     */
+    private void removeAuthorityReferences(Context context, Item deletedItem) throws SQLException, AuthorizeException {
+        String uuidOfDeletedItem = deletedItem.getID().toString();
+        List<String> controlledFields = getAuthorityControlledFieldsByItemEntityType(deletedItem);
+
+        Iterator<Item> itemsToFixAuthority =
+            this.findRelatedItemsByAuthorityControlledFields(context, deletedItem, Arrays.asList(uuidOfDeletedItem));
+
+        while (itemsToFixAuthority.hasNext()) {
+            Item itemToProcess = itemsToFixAuthority.next();
+
+            for (String controlledField : controlledFields) {
+                List<MetadataValue> metadataValuesWithAuthorityToUpdate = getMetadataWithAuthority(itemToProcess,
+                                                                                                   controlledField,
+                                                                                                   uuidOfDeletedItem);
+
+                if (CollectionUtils.isEmpty(metadataValuesWithAuthorityToUpdate)) {
+                    continue;
+                }
+
+                String cleanUpMode = getCleanUpMode(controlledField);
+
+                for (MetadataValue metadataValue : metadataValuesWithAuthorityToUpdate) {
+                    applyCleanUpMode(context, deletedItem, itemToProcess, metadataValue, cleanUpMode);
+                }
+            }
+            update(context, itemToProcess);
+            context.uncacheEntity(itemToProcess);
+        }
+    }
+
+    private List<MetadataValue> getMetadataWithAuthority(Item item, String metadataField, String authority) {
+        if (isValidMetadata(metadataField)) {
+            return getMetadataByMetadataString(item, metadataField).stream()
+                                                                   .filter(metadataValue -> StringUtils.equals(
+                                                                       metadataValue.getAuthority(), authority))
+                                                                   .collect(Collectors.toList());
+        }
+        return List.of();
+    }
+
+    public boolean isValidMetadata(String metadataField) {
+        if (metadataField.split(Pattern.quote(".")).length > 3) {
+            return false;
+        }
+        return true;
+    }
+
+    private void applyCleanUpMode(Context context, Item deletedItem, Item itemToProcess,
+                                  MetadataValue metadataValueWithAuthorityToUpdate, String cleanUpMode)
+        throws SQLException {
+
+        switch (cleanUpMode) {
+            case AUTHORITY_CLEANUP_BUSINESS_MODE:
+                replaceAuthorityWithItemBusinessIdentifier(deletedItem, metadataValueWithAuthorityToUpdate);
+                break;
+            case AUTHORITY_CLEANUP_CLEAN_ALL_MODE:
+                removeMetadataValues(context, itemToProcess, Arrays.asList(metadataValueWithAuthorityToUpdate));
+                break;
+            default:
+                log.error("The configured mode:" + cleanUpMode + " for metadata:"
+                              + metadataValueWithAuthorityToUpdate.getMetadataField().toString() + " is not supported");
+        }
+    }
+
+    private void replaceAuthorityWithItemBusinessIdentifier(Item deletedItem, MetadataValue mvWithAuthorityToUpdate) {
+        String authority = getBusinesIdentifier(deletedItem)
+            .map(businessId -> REFERENCE + businessId)
+            .orElse(null);
+
+        mvWithAuthorityToUpdate.setAuthority(authority);
+        mvWithAuthorityToUpdate.setConfidence(CF_UNSET);
+    }
+
+    private String getCleanUpMode(String metadataField) {
+        String mode = configurationService.getProperty(AUTHORITY_CLEANUP_PROPERTY_PREFIX + metadataField);
+        if (StringUtils.isBlank(mode)) {
+            mode = configurationService.getProperty(AUTHORITY_CLEANUP_PROPERTY_PREFIX + "default");
+        }
+        return mode;
+    }
+
+    private List<String> getAuthorityControlledFieldsByItemEntityType(Item item) {
+        String entityType = this.getEntityType(item);
+        return choiceAuthorityService.getAuthorityControlledFieldsByEntityType(entityType)
+                                     .stream()
+                                     .filter(field -> isValidMetadata(field))
+                                     .map(field -> field.replaceAll("_", "."))
+                                     .collect(Collectors.toList());
+    }
+
+    private Optional<String> getBusinesIdentifier(Item item) {
+        for (ItemSearcherByMetadata itemSearcherByMetadata : itemSearcherByMetadata) {
+            String businessIdentifier = getMetadata(item, itemSearcherByMetadata.getMetadata());
+            if (StringUtils.isNotBlank(businessIdentifier)) {
+                return Optional.of(itemSearcherByMetadata.getAuthorityPrefix() + SPLIT + businessIdentifier);
+            }
+        }
+        return Optional.empty();
     }
 
     protected void removeRequest(Context context, Item item) throws SQLException {
@@ -1168,6 +1338,11 @@ public class ItemServiceImpl extends DSpaceObjectServiceImpl<Item> implements It
             authorizeService.authorizeAction(context, item, Constants.WRITE);
         }
 
+        // If the two collections are the same, do nothing.
+        if (from.equals(to)) {
+            return;
+        }
+
         // Move the Item from one Collection to the other
         collectionService.addItem(context, to, item);
         collectionService.removeItem(context, from, item);
@@ -1255,7 +1430,7 @@ public class ItemServiceImpl extends DSpaceObjectServiceImpl<Item> implements It
             if (!isInProgressSubmission(context, item)) {
                 return true;
             }
-            return false;
+            return researcherProfileService.isAuthorOf(context, context.getCurrentUser(), item);
         }
 
         return collectionService.canEditBoolean(context, item.getOwningCollection(), false);
@@ -1268,43 +1443,41 @@ public class ItemServiceImpl extends DSpaceObjectServiceImpl<Item> implements It
      *
      * @param context                    DSpace context
      * @param discoverQuery
+     * @param q                          query string
      * @return                           discovery search result objects
-     * @throws SQLException              if something goes wrong
      * @throws SearchServiceException    if search error
      */
-    private DiscoverResult retrieveItemsWithEdit(Context context, DiscoverQuery discoverQuery)
-        throws SQLException, SearchServiceException {
-        EPerson currentUser = context.getCurrentUser();
-        if (!authorizeService.isAdmin(context)) {
-            String userId = currentUser != null ? "e" + currentUser.getID().toString() : "e";
-            Stream<String> groupIds = groupService.allMemberGroupsSet(context, currentUser).stream()
-                .map(group -> "g" + group.getID());
-            String query = Stream.concat(Stream.of(userId), groupIds)
-                .collect(Collectors.joining(" OR ", "edit:(", ")"));
-            discoverQuery.addFilterQueries(query);
+    private DiscoverResult retrieveItemsWithEdit(Context context, DiscoverQuery discoverQuery, String q)
+        throws SearchServiceException {
+        if (StringUtils.isNotBlank(q)) {
+            // Although not all items will have a metadata dc.title, we use it for autocomplete because it is the
+            // most common. Ideally, we should use a field that all indexed items have
+            q = searchService.formatAutoCompleteQuery(q, "dc.title_sort");
+            discoverQuery.setQuery(q);
         }
+        discoverQuery.addRequiredAuthorization(Constants.WRITE);
         return searchService.search(context, discoverQuery);
     }
 
     @Override
-    public List<Item> findItemsWithEdit(Context context, int offset, int limit)
-        throws SQLException, SearchServiceException {
+    public List<Item> findItemsWithEdit(Context context, String q, int offset, int limit)
+        throws SearchServiceException {
         DiscoverQuery discoverQuery = new DiscoverQuery();
         discoverQuery.setDSpaceObjectFilter(IndexableItem.TYPE);
         discoverQuery.setStart(offset);
         discoverQuery.setMaxResults(limit);
-        DiscoverResult resp = retrieveItemsWithEdit(context, discoverQuery);
+        DiscoverResult resp = retrieveItemsWithEdit(context, discoverQuery, q);
         return resp.getIndexableObjects().stream()
             .map(solrItems -> ((IndexableItem) solrItems).getIndexedObject())
             .collect(Collectors.toList());
     }
 
     @Override
-    public int countItemsWithEdit(Context context) throws SQLException, SearchServiceException {
+    public int countItemsWithEdit(Context context, String q) throws SearchServiceException {
         DiscoverQuery discoverQuery = new DiscoverQuery();
         discoverQuery.setMaxResults(0);
         discoverQuery.setDSpaceObjectFilter(IndexableItem.TYPE);
-        DiscoverResult resp = retrieveItemsWithEdit(context, discoverQuery);
+        DiscoverResult resp = retrieveItemsWithEdit(context, discoverQuery, q);
         return (int) resp.getTotalSearchResults();
     }
 
@@ -1372,6 +1545,47 @@ prevent the generation of resource policy entry values with null dspace_object a
             throws SQLException, AuthorizeException {
         String[] mdValueByField = getMDValueByField(metadataField);
         return findArchivedByMetadataField(context, mdValueByField[0], mdValueByField[1], mdValueByField[2], value);
+    }
+
+    @Override
+    public Iterator<Item> findUnfilteredByMetadataField(Context context, String schema, String element,
+                                                        String qualifier, String value)
+        throws SQLException, AuthorizeException {
+        MetadataSchema mds = metadataSchemaService.find(context, schema);
+        if (mds == null) {
+            throw new IllegalArgumentException("No such metadata schema: " + schema);
+        }
+        MetadataField mdf = metadataFieldService.findByElement(context, mds, element, qualifier);
+        if (mdf == null) {
+            throw new IllegalArgumentException(
+                "No such metadata field: schema=" + schema + ", element=" + element + ", qualifier=" + qualifier);
+        }
+
+        if (Item.ANY.equals(value)) {
+            return itemDAO.findByMetadataField(context, mdf, null);
+        }
+        return itemDAO.findByMetadataField(context, mdf, value);
+    }
+
+    @Override
+    public Iterator<Item> findArchivedByMetadataFieldExcludingOldVersions(Context context, String schema,
+                                                                          String element, String qualifier,
+                                                                          String value)
+        throws SQLException, AuthorizeException {
+        MetadataSchema mds = metadataSchemaService.find(context, schema);
+        if (mds == null) {
+            throw new IllegalArgumentException("No such metadata schema: " + schema);
+        }
+        MetadataField mdf = metadataFieldService.findByElement(context, mds, element, qualifier);
+        if (mdf == null) {
+            throw new IllegalArgumentException(
+                "No such metadata field: schema=" + schema + ", element=" + element + ", qualifier=" + qualifier);
+        }
+
+        if (Item.ANY.equals(value)) {
+            return itemDAO.findByMetadataFieldExcludingOldVersions(context, mdf, null, true);
+        }
+        return itemDAO.findByMetadataFieldExcludingOldVersions(context, mdf, value, true);
     }
 
     /**
@@ -1523,6 +1737,12 @@ prevent the generation of resource policy entry values with null dspace_object a
     }
 
     @Override
+    public Iterator<Item> findByLikeAuthorityValue(Context context, String likeAuthority,
+                                                   Boolean inArchive) throws SQLException {
+        return itemDAO.findByLikeAuthorityValue(context, likeAuthority, inArchive);
+    }
+
+    @Override
     public Iterator<Item> findByMetadataFieldAuthority(Context context, String mdString, String authority)
         throws SQLException, AuthorizeException {
         String[] elements = getElementsFilled(mdString);
@@ -1591,9 +1811,10 @@ prevent the generation of resource policy entry values with null dspace_object a
     }
 
     @Override
-    protected void getAuthoritiesAndConfidences(String fieldKey, Collection collection, List<String> values,
-                                                List<String> authorities, List<Integer> confidences, int i) {
-        Choices c = choiceAuthorityService.getBestMatch(fieldKey, values.get(i), collection, null);
+    protected void getAuthoritiesAndConfidences(String fieldKey, int dsoType, Collection collection,
+                                                List<String> values, List<String> authorities,
+                                                List<Integer> confidences, int i) {
+        Choices c = choiceAuthorityService.getBestMatch(fieldKey, values.get(i), dsoType, collection, null);
         authorities.add(c.values.length > 0 && c.values[0] != null ? c.values[0].authority : null);
         confidences.add(c.confidence);
     }
@@ -1689,6 +1910,10 @@ prevent the generation of resource policy entry values with null dspace_object a
     @Override
     public List<MetadataValue> getMetadata(Item item, String schema, String element, String qualifier, String lang,
                                            boolean enableVirtualMetadata) {
+
+        enableVirtualMetadata = enableVirtualMetadata
+            && configurationService.getBooleanProperty("relationship.enable-virtual-metadata", true);
+
         if (!enableVirtualMetadata) {
             log.debug("Called getMetadata for " + item.getID() + " without enableVirtualMetadata");
             return super.getMetadata(item, schema, element, qualifier, lang);
@@ -1699,7 +1924,9 @@ prevent the generation of resource policy entry values with null dspace_object a
             List<MetadataValue> dbMetadataValues = item.getMetadata();
 
             List<MetadataValue> fullMetadataValueList = new LinkedList<>();
-            fullMetadataValueList.addAll(relationshipMetadataService.getRelationshipMetadata(item, true));
+            if (configurationService.getBooleanProperty("relationship.enable-virtual-metadata", true)) {
+                fullMetadataValueList.addAll(relationshipMetadataService.getRelationshipMetadata(item, true));
+            }
             fullMetadataValueList.addAll(dbMetadataValues);
 
             item.setCachedMetadata(MetadataValueComparators.sort(fullMetadataValueList));
@@ -1709,13 +1936,29 @@ prevent the generation of resource policy entry values with null dspace_object a
         // Build up list of matching values based on the cache
         List<MetadataValue> values = new ArrayList<>();
         for (MetadataValue dcv : item.getCachedMetadata()) {
-            if (match(schema, element, qualifier, lang, dcv)) {
+            if (match(schema, element, qualifier, dcv)) {
                 values.add(dcv);
             }
         }
 
+        values = getFilteredMetadataValuesByLanguage(values, lang);
+
         // Create an array of matching values
         return values;
+    }
+
+    @Override
+    public String getEntityType(Item item) {
+        return getMetadataFirstValue(item, new MetadataFieldName("dspace.entity.type"), Item.ANY);
+    }
+
+    @Override
+    public void setEntityType(Context context, Item item, String entityType) {
+        try {
+            setMetadataSingleValue(context, item, new MetadataFieldName("dspace.entity.type"), null, entityType);
+        } catch (SQLException e) {
+            throw new SQLRuntimeException(e);
+        }
     }
 
     /**
@@ -1730,7 +1973,7 @@ prevent the generation of resource policy entry values with null dspace_object a
                 //Retrieve the applicable relationship
                 Relationship rs = relationshipService.find(context,
                         ((RelationshipMetadataValue) rr).getRelationshipId());
-                if (rs.getLeftItem().equals(dso)) {
+                if (rs.getLeftItem().getID().equals(dso.getID())) {
                     rs.setLeftPlace(place);
                 } else {
                     rs.setRightPlace(place);
@@ -1759,10 +2002,80 @@ prevent the generation of resource policy entry values with null dspace_object a
                 "exist!");
         }
 
-        final Supplier<Integer> placeSupplier =  () -> place;
+        final Supplier<Integer> placeSupplier = () -> place;
 
-        return addMetadata(context, dso, metadataField, lang, Arrays.asList(value),
-                Arrays.asList(authority), Arrays.asList(confidence), placeSupplier)
+        return addMetadata(context, dso, metadataField, lang, Collections.singletonList(value),
+                           Collections.singletonList(authority), List.of(confidence), placeSupplier)
+                .stream().findFirst().orElse(null);
+    }
+
+    /**
+     * Adds a metadata value to an Item at a specific position with a security level.
+     *
+     * <p><strong>Implementation Override:</strong></p>
+     * <p>This is the concrete implementation of the default empty method defined in
+     * {@link org.dspace.content.service.DSpaceObjectService#addMetadataInPlaceSecured}.</p>
+     *
+     * <p><strong>What This Method Does:</strong></p>
+     * <ol>
+     *   <li><strong>Validates Metadata Field:</strong> Ensures the metadata field exists in the
+     *       metadata registry. Throws an exception if the field is not registered.</li>
+     *   <li><strong>Inserts at Specified Position:</strong> Places the metadata value at the
+     *       exact position specified by the {@code place} parameter rather than appending to the end.</li>
+     *   <li><strong>Applies Security Level:</strong> Sets the {@code security_level} to control who can
+     *   view this metadata value based on the three-tier security system.</li>
+     *   <li><strong>Delegates to Core Add Method:</strong> Uses the internal
+     *       {@code addMetadata(context, dso, metadataField, lang, values, authorities, confidences,
+     *       placeSupplier, securityValue)} method which handles database persistence, place calculations,
+     *       and metadata event tracking.</li>
+     * </ol>
+     *
+     * <p><strong>Security Level System:</strong></p>
+     * <ul>
+     *   <li><strong>{@code null}</strong> - No additional security restriction; follows standard field-level
+     *       visibility rules (most common, default behavior)</li>
+     *   <li><strong>0</strong> - Public access (everyone can view, evaluated by {@code MetadataPublicAccess})</li>
+     *   <li><strong>1</strong> - Group-based access (only "Trusted" group members, evaluated by
+     *       {@code MetadataGroupBasedAccess})</li>
+     *   <li><strong>2</strong> - Administrator and owner access only (evaluated by
+     *       {@code MetadataAdministratorAndOwnerAccess})</li>
+     * </ul>
+     *
+     * @param context       DSpace context for database operations and authorization
+     * @param dso           the Item to add metadata to
+     * @param schema        metadata field schema (e.g., "dc", "dcterms")
+     * @param element       metadata field element (e.g., "title", "contributor")
+     * @param qualifier     metadata field qualifier (e.g., "author", "alternative"), or {@code null} for unqualified
+     * @param lang          ISO639 language code (e.g., "en", "en_US"), or {@code null} for no language
+     * @param value         the metadata value to add
+     * @param authority     external authority key for this value (e.g., ORCID, UUID), or {@code null}
+     * @param confidence    authority confidence level (use {@link org.dspace.content.authority.Choices} constants)
+     * @param place         the exact position where this value should be inserted (0-based index)
+     * @param securityValue the security level: {@code null} (default), {@code 0} (public), {@code 1} (group),
+     *                      or {@code 2} (admin/owner)
+     * @return the newly created MetadataValue object, or {@code null} if creation failed
+     * @throws SQLException if the metadata field does not exist in the registry or database operations fail
+     * @see #addMetadata(Context, Item, MetadataField, String, List, List, List, Supplier, Integer)
+     * @see org.dspace.content.security.MetadataSecurityServiceImpl
+     * @see org.dspace.content.service.MetadataSecurityEvaluation
+     */
+    @Override
+    public MetadataValue addMetadataInPlaceSecured(Context context, Item dso, String schema, String element,
+                                                   String qualifier, String lang, String value,
+                                                   String authority, int confidence, int place,
+                                                   Integer securityValue)
+        throws SQLException {
+
+        // We will not verify that they are valid entries in the registry
+        // until update() is called.
+        MetadataField metadataField = metadataFieldService.findByElement(context, schema, element, qualifier);
+        if (metadataField == null) {
+            throw new SQLException("bad_dublin_core schema=" + schema + "." + element + "." + qualifier +
+                    ". Metadata field does not exist!");
+        }
+        final Supplier<Integer> placeSupplier = () -> place;
+        return addMetadata(context, dso, metadataField, lang, Collections.singletonList(value),
+                           Collections.singletonList(authority), List.of(confidence), placeSupplier, securityValue)
                 .stream().findFirst().orElse(null);
     }
 
@@ -1860,6 +2173,32 @@ prevent the generation of resource policy entry values with null dspace_object a
         for (OrcidQueue orcidQueueRecord : orcidQueueRecords) {
             orcidQueueService.delete(context, orcidQueueRecord);
         }
+    }
+
+    @Override
+    public Iterator<Item> findRelatedItemsByAuthorityControlledFields(Context c, Item item, List<String> authorities) {
+        String entityType = this.getEntityType(item);
+        String query = choiceAuthorityService.getAuthorityControlledFieldsByEntityType(entityType).stream()
+                                             .map(field -> getFieldFilter(field, authorities))
+                                             .collect(Collectors.joining(" OR "));
+
+        if (StringUtils.isEmpty(query)) {
+            return Collections.emptyIterator();
+        }
+
+        DiscoverQuery discoverQuery = new DiscoverQuery();
+        discoverQuery.addDSpaceObjectFilter(IndexableItem.TYPE);
+        discoverQuery.addDSpaceObjectFilter(IndexableWorkspaceItem.TYPE);
+        discoverQuery.addDSpaceObjectFilter(IndexableWorkflowItem.TYPE);
+        discoverQuery.addFilterQueries(query);
+
+        return new DiscoverResultItemIterator(c, discoverQuery, false);
+    }
+
+    private String getFieldFilter(String field, List<String> authorities) {
+        return authorities.stream()
+                          .map(authority -> field.replaceAll("_", ".") + "_allauthority: \"" + authority + "\"")
+                          .collect(Collectors.joining(" OR "));
     }
 
     @Override
